# teraslice-3d

./: .gitignore  CLAUDE.md  Dockerfile  README.md  issue-26-todo.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish-tag.yaml  test.yml
TODO/: 001-add-testing.md
app/: main.py
app/lib/: cache.py  ts.py
backend/: jobs-v3.json
backend/app/: main.py
backend/app/lib/: ts.py
backend/tests/fixtures/: teraslice_jobs.py
backend/tests/unit/: test_cache.py  test_cache_endpoints.py  test_job_info.py  test_jobs_caching.py  test_storage_node.py
backlog/tasks/: task-1 - Add-Node-Filtering-Feature.md  task-2.md  task-3 - Restructure-frontend-project.md  task-5 - Enhance-filtering-with-outline-highlighting.md  task-6 - add-caching-and-refresh.md
charts/teraslice-3d/: Chart.yaml  values.yaml
charts/teraslice-3d/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: main.js  main.ts  style.css
frontend/src/controls/: GuiControls.js  GuiControls.ts
frontend/src/graph/: GraphColors.js  GraphColors.ts  GraphFilters.js  GraphFilters.ts  GraphRenderer.js  (+1 more)
scripts/: run-e2e-tests.sh
static/: lil-gui.esm.js
templates/: graph.html
tests/e2e/: README.md  conftest.py  homepage.test.js  playwright.config.py  pytest.ini  test_api_endpoints.py  test_graph_ui.py
tests/fixtures/: teraslice_jobs.py
tests/unit/: test_job_info.py  test_pipeline_graph_processing.py
(+12 files in other folders)
